- Fix build with ROCm 6.0 and device ID in stream names `HIP[D:S]`.
- Provide the missing wrapper for `MPI_Request_get_status` and properly
  handle the case where the operation hasn't been completed yet.
- Fix abort of OMPT adapter with nested parallel regions inside of tasks.
- Fix duplicate MPI inter-communicator definitions for cases with
  distinct peer communicators.

------------------- Released version 8.3 -----------------------------

Bugfixes:

- Fix abort in OMPT adapter for OpenMP loops if runtime supports
  reporting loop schedules.
- Fix 'inconsistent profile' abort in OMPT adapter seen with NVHPC and
  nested OpenMP parallel region where the outer parallel region uses a
  single thread only.

------------------- Released version 8.2 -----------------------------

Features and improvements:

- The OMPT adapter is now able to report the schedule type selected
  in OpenMP loops. However, this needs to be supported by the runtime.
- Communicators created with one of the procedures added in MPI 4.0 are now
  properly tracked by Score-P.

Compatibility:

- The HIP adapter requires the ROCm SMI library.
- Score-P now requires CubeW and CubeLib in version 4.8.2.

Bugfixes:

- The OpenMP detection now additionally checks for the `-fiopenmp` flag
  used by Intel oneAPI.
- The OMPT adapter now aborts when it detects non-conforming OpenMP
  behavior observed with runtimes that don't support OMPT target
  callbacks (here, helper threads are created that lack thread-begin
  and implicit-task-begin but dispatch parallel-begin).
- Support for OpenMP's tool interface OMPT will be partially disabled
  if configure detects shortcomings of the OpenMP runtime that can be
  worked around by disabling parts of the interface. The reason will
  be reported in the configure summary as `OMPT remediable checks`,
  whereas shortcomings that can't be worked around are now reported as
  `OMPT critical checks`.
- Additional compiler-generated functions are excluded from automatic