@@ -44,6 +44,8 @@ Bugfixes:
 - Fix abort of OMPT adapter with nested parallel regions inside of tasks.
 - Fix duplicate MPI inter-communicator definitions for cases with
   distinct peer communicators.
+- Fix inconsistent measurement with memory copies being done with changed
+  contexts. The exit event is now properly ignored as well.
 
 ------------------- Released version 8.3 -----------------------------
 
